specs/requests/invalid/005.http
GET /foo HTTP/1.1

ba\0z: bar


